# binread

./: README.md
binread/: Cargo.toml
binread/src/: binary_template.rs  binread_impls.rs  endian.rs  error.rs  file_ptr.rs  helpers.rs  lib.rs  pos_value.rs  private.rs  punctuated.rs  strings.rs
binread/src/io/: cursor.rs  error.rs  mod.rs  no_std.rs
binread/tests/: after_parse_test.rs  const_generic.rs  derive_tests.rs
binread/tests/derive/: enums.rs  struct_generic.rs  struct_map.rs  structs.rs  unit_enum.rs  unit_struct.rs
binread/tests/io/: no_std.rs
binread_derive/: Cargo.toml
binread_derive/src/: lib.rs
binread_derive/src/codegen/: mod.rs  read_options.rs  sanitization.rs
binread_derive/src/codegen/read_options/: struct.rs
