[package]
name = "binread"
version = "2.2.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
repository = "https://github.com/jam1garner/binread"
license = "MIT"
description = "A Rust crate for helping read structs from binary data using ✨macro magic✨"
readme = "../README.md"
documentation = "https://docs.rs/binread"

[[test]]
name = "const_generic"
required-features = ["const_generics"]

[dependencies]
array-init = { version = "2.0.0", optional = true }
binread_derive = { version = "2.1.0", path = "../binread_derive" }
lazy_static = { version = "1.4", optional = true }
rustversion = "1.0"

[dev-dependencies]
modular-bitfield = "0.9"
trybuild = "1.0"

[features]
const_generics = ["array-init"]
default = ["std"]
std = []
debug_template = ["std", "lazy_static", "binread_derive/debug_template"]
